please squash me later

--- a/apps/portfolio/src/components/projectLinks.astro
+++ b/apps/portfolio/src/components/projectLinks.astro
@@ -8,6 +8,9 @@
             <a class="text-tertiary text-xl" href="/projects/router">router</a>
         </li>
         <li>
+            <a class="text-tertiary text-xl" href="/projects/interpreter">interpreter</a>
+        </li>
+        <li>
             <a class="text-tertiary text-xl" href="/projects/portfolio">portfolio</a>
         </li>
     </ul>
