more to portfolio

--- a/apps/portfolio/src/components/langs.astro
+++ b/apps/portfolio/src/components/langs.astro
@@ -35,6 +35,9 @@
             <p>Bash</p>
         </li>
         <li>
+            <p>Ocaml</p>
+        </li>
+        <li>
             <p>Haskell</p>
         </li>
     </ul>
