--- a/apps/portfolio/src/components/projectLinks.astro
+++ b/apps/portfolio/src/components/projectLinks.astro
@@ -11,6 +11,9 @@
             <a class="text-tertiary text-xl" href="/projects/interpreter">interpreter</a>
         </li>
         <li>
+            <a class="text-tertiary text-xl" href="/projects/stock">stock</a>
+        </li>
+        <li>
             <a class="text-tertiary text-xl" href="/projects/portfolio">portfolio</a>
         </li>
     </ul>
