--- a/apps/portfolio/src/pages/projects/db/index.astro
+++ b/apps/portfolio/src/pages/projects/db/index.astro
@@ -1,7 +1,7 @@
 ---
 import SiteLayout from "../../../layouts/siteLayout.astro";
 import Md from "../../../components/md.astro";
-import Db from "../../../components/db.md";
+import Db from "../../../components/projects/db.md";
 ---
 
 <SiteLayout>
