--- a/apps/portfolio/src/pages/projects/interpreter/index.astro
+++ b/apps/portfolio/src/pages/projects/interpreter/index.astro
@@ -1,7 +1,7 @@
 ---
 import SiteLayout from "../../../layouts/siteLayout.astro";
 import Md from "../../../components/md.astro";
-import Interpreter from "../../../components/interpreter.md";
+import Interpreter from "../../../components/projects/interpreter.md";
 ---
 
 <SiteLayout>
