--- a/apps/portfolio/src/pages/projects/stock/index.astro
+++ b/apps/portfolio/src/pages/projects/stock/index.astro
@@ -1,14 +1,13 @@
 ---
 import SiteLayout from "../../../layouts/siteLayout.astro";
 import Md from "../../../components/md.astro";
-import Router from "../../../components/projects/router.md";
+import Stock from "../../../components/projects/stock.md";
 ---
 
 <SiteLayout>
     <main class="grid w-full place-items-center">
         <Md>
-            <Router />
+            <Stock />
         </Md>
     </main>
 </SiteLayout>
-
