--- a/apps/axum-htmx/css/index.css
+++ b/apps/axum-htmx/css/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ah-resp {
+    display: grid;
+
+    gap: 1rem;
+
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+}
