--- a/apps/lexidb-docs/src/pages/index.astro
+++ b/apps/lexidb-docs/src/pages/index.astro
@@ -1,15 +1,10 @@
 ---
+import Layout from "../layouts/site.astro";
+import Home from "../components/home.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+    <main>
+        <Home />
+    </main>
+</Layout>
