--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -1,13 +1,7 @@
 ---
-import SiteLayout from "../layouts/siteLayout.astro";
-import Hero from "../components/hero.astro";
-import Langs from "../components/langs.astro";
+import Main from "../layouts/main.astro";
 ---
 
-<SiteLayout>
-    <main class="grid w-full">
-        <article class="w-full flex justify-center">
-            <Hero />
-        </article>
-    </main>
-</SiteLayout>
+<Main>
+    <h2>Portfolio</h2>
+</Main>
