--- a/apps/portfolio/src/components/footer/index.astro
+++ b/apps/portfolio/src/components/footer/index.astro
@@ -1,9 +1,14 @@
 ---
-import Contact from "../contact/index.astro"
+import Contact from "../contact/index.astro";
+import NavLinks from "../links/navlinks.astro";
 ---
 
 
 <footer>
+    <section>
+        <h2>site links</h2>
+        <NavLinks />
+    </section>
     <section>
         <h2>Contact</h2>
         <Contact />
