--- a/apps/portfolio/src/components/header/index.astro
+++ b/apps/portfolio/src/components/header/index.astro
@@ -1,7 +1,8 @@
 ---
 import NavLinks from "../links/navlinks.astro";
+import Navbar from "./navbar.astro";
 ---
 
 <header>
-    <NavLinks />
+    <Navbar />
 </header>
