--- a/apps/portfolio/src/components/links/navlinks.astro
+++ b/apps/portfolio/src/components/links/navlinks.astro
@@ -1,17 +1,16 @@
 ---
 ---
 
-<navbar>
-    <section>
-        <a href="/">
-            <h1>Vince</h1>
-        </a>
-    </section>
-    <section>
-        <ul>
-            <li>
-                <a href="/resume">resume</a>
-            </li>
-        </ul>
-    </section>
-</navbar>
+<section>
+    <ul>
+        <li>
+            <a href="/about">about</a>
+        </li>
+        <li>
+            <a href="/resume">resume</a>
+        </li>
+        <li>
+            <a href="/projects">projects</a>
+        </li>
+    </ul>
+</section>
