--- a/apps/portfolio/src/components/links/projectlinks.astro
+++ b/apps/portfolio/src/components/links/projectlinks.astro
@@ -9,5 +9,8 @@
         <li>
             <a href="/projects/diety">diety</a>
         </li>
+        <li>
+            <a href="/projects/vstr">vstr</a>
+        </li>
     </ul>
 </section>
