--- a/apps/portfolio/src/pages/projects/db/index.astro
+++ b/apps/portfolio/src/pages/projects/db/index.astro
@@ -1,9 +1,13 @@
 ---
 import ProjectsLayout from "../../../layouts/projects.astro";
+import Overview from "../../../components/projects/db/overview.md";
+import Features from "../../../components/projects/db/features.md";
 ---
 
 
 <ProjectsLayout>
     <h2>DB</h2>
+    <Overview />
+    <Features />
 </ProjectsLayout>
 
