feat: add some more projects

--- a/apps/portfolio/src/components/links/projectlinks.astro
+++ b/apps/portfolio/src/components/links/projectlinks.astro
@@ -1,7 +1,7 @@
 <section>
     <ul>
         <li>
-            <a href="/projects/db">db</a>
+            <a href="/projects/db">LexiDB</a>
         </li>
         <li>
             <a href="/projects/interpreter">interpreter</a>
@@ -11,6 +11,15 @@
         </li>
         <li>
             <a href="/projects/vstr">vstr</a>
+        </li>
+        <li>
+            <a href="/projects/cpu-monitor">CPU monitor</a>
+        </li>
+        <li>
+            <a href="/projects/news-app">News App</a>
+        </li>
+        <li>
+            <a href="/projects/stock-app">Stock App</a>
         </li>
     </ul>
 </section>
