--- a/apps/portfolio/src/pages/projects/db/index.astro
+++ b/apps/portfolio/src/pages/projects/db/index.astro
@@ -6,7 +6,7 @@ import Features from "../../../components/projects/db/features.md";
 
 
 <ProjectsLayout>
-    <h2>DB</h2>
+    <h2>LexiDB</h2>
     <Overview />
     <Features />
 </ProjectsLayout>
