--- a/apps/portfolio/src/pages/projects/diety/index.astro
+++ b/apps/portfolio/src/pages/projects/diety/index.astro
@@ -1,9 +1,13 @@
 ---
 import ProjectsLayout from "../../../layouts/projects.astro";
+import Overview from "../../../components/projects/diety/overview.md"
+import Features from "../../../components/projects/diety/features.md"
 ---
 
 
 <ProjectsLayout>
     <h2>Diety</h2>
+    <Overview />
+    <Features />
 </ProjectsLayout>
 
