--- a/apps/portfolio/src/pages/projects/vstr/index.astro
+++ b/apps/portfolio/src/pages/projects/vstr/index.astro
@@ -1,9 +1,13 @@
 ---
 import ProjectsLayout from "../../../layouts/projects.astro";
+import Overview from "../../../components/projects/vstr/overview.md"
+import Features from "../../../components/projects/vstr/features.md"
 ---
 
 
 <ProjectsLayout>
     <h2>vstr</h2>
+    <Overview />
+    <Features />
 </ProjectsLayout>
 
