feat: more projects in portfolio

--- a/apps/portfolio/src/components/links/projectlinks.astro
+++ b/apps/portfolio/src/components/links/projectlinks.astro
@@ -7,10 +7,10 @@
             <a href="/projects/interpreter">interpreter</a>
         </li>
         <li>
-            <a href="/projects/diety">diety</a>
+            <a href="/projects/vstr">vstr</a>
         </li>
         <li>
-            <a href="/projects/vstr">vstr</a>
+            <a href="/projects/diety">diety</a>
         </li>
         <li>
             <a href="/projects/cpu-monitor">CPU monitor</a>
@@ -20,6 +20,9 @@
         </li>
         <li>
             <a href="/projects/stock-app">Stock App</a>
+        </li>
+        <li>
+            <a href="/projects/router">Router</a>
         </li>
     </ul>
 </section>
