--- a/apps/portfolio/src/pages/resume/index.astro
+++ b/apps/portfolio/src/pages/resume/index.astro
@@ -1,7 +1,14 @@
 ---
 import Main from "../../layouts/main.astro";
+import Header from "../../components/resume/header.md";
+import Education from "../../components/resume/education.md";
+import Skills from "../../components/resume/skills.md";
+import Experience from "../../components/resume/experience.md";
 ---
 
 <Main>
-    <h2>Resume</h2>
+    <Header />
+    <Education />
+    <Skills />
+    <Experience />
 </Main>
