feat: (stock) load spinner on requests

--- a/apps/stock/public/views/search.html
+++ b/apps/stock/public/views/search.html
@@ -7,6 +7,7 @@
         <h4>Address: {{ index . "address" }}</h4>
     </section>
     <section>
+        <p>Market cap: {{ index . "mc" }}</p>
         <p>EBITDA: {{ index . "ebitda" }}</p>
         <p>PE ratio: {{ index . "pe" }}</p>
         <p>Book value: {{ index . "book" }}</p>
