feat: (portfolio) bring in tailwind

--- a/apps/portfolio/src/components/contact/index.astro
+++ b/apps/portfolio/src/components/contact/index.astro
@@ -3,9 +3,9 @@
 
 <section>
     <div>
-        <a href="mailto: ronnebaumvince@gmail.com">email</a>
+        <a href="mailto: ronnebaumvince@gmail.com" class="text-xl underline">email</a>
     </div>
     <div>
-        <a href="tel:+1614-747-2182">phone</p>
+        <a href="tel:+1614-747-2182" class="text-xl underline">phone</p>
     </div>
 </section>
