--- a/apps/portfolio/src/components/header/index.astro
+++ b/apps/portfolio/src/components/header/index.astro
@@ -3,6 +3,6 @@ import NavLinks from "../links/navlinks.astro";
 import Navbar from "./navbar.astro";
 ---
 
-<header>
+<header class="bg-neutral-200">
     <Navbar />
 </header>
