--- a/apps/portfolio/src/components/header/navbar.astro
+++ b/apps/portfolio/src/components/header/navbar.astro
@@ -2,10 +2,10 @@
 import NavLinks from "../links/navlinks.astro";
 ---
 
-<navbar>
+<navbar class="flex p-5">
     <section>
         <a href="/">
-            <h1>Vince</h1>
+            <h1 class="text-3xl">Vince</h1>
         </a>
     </section>
     <NavLinks />
