--- a/apps/portfolio/src/components/links/navlinks.astro
+++ b/apps/portfolio/src/components/links/navlinks.astro
@@ -1,16 +1,16 @@
 ---
 ---
 
-<section>
-    <ul>
-        <li>
-            <a href="/about">about</a>
+<section class="grow">
+    <ul class="flex items-center justify-center">
+        <li class="px-5">
+            <a href="/about" class="text-2xl underline">about me</a>
         </li>
-        <li>
-            <a href="/resume">resume</a>
+        <li class="px-5">
+            <a href="/resume" class="text-2xl underline">resume</a>
         </li>
-        <li>
-            <a href="/projects">projects</a>
+        <li class="px-5">
+            <a href="/projects" class="text-2xl underline">projects</a>
         </li>
     </ul>
 </section>
