--- a/apps/portfolio/src/components/links/projectlinks.astro
+++ b/apps/portfolio/src/components/links/projectlinks.astro
@@ -1,28 +1,28 @@
 <section>
-    <ul>
-        <li>
-            <a href="/projects/db">LexiDB</a>
+    <ul class="flex items-center justify-center">
+        <li class="px-5">
+            <a href="/projects/db" class="text-xl underline">LexiDB</a>
         </li>
-        <li>
-            <a href="/projects/interpreter">interpreter</a>
+        <li class="px-5">
+            <a href="/projects/interpreter" class="text-xl underline">interpreter</a>
         </li>
-        <li>
-            <a href="/projects/vstr">vstr</a>
+        <li class="px-5">
+            <a href="/projects/vstr" class="text-xl underline">vstr</a>
         </li>
-        <li>
-            <a href="/projects/diety">diety</a>
+        <li class="px-5">
+            <a href="/projects/diety" class="text-xl underline">diety</a>
         </li>
-        <li>
-            <a href="/projects/cpu-monitor">CPU monitor</a>
+        <li class="px-5">
+            <a href="/projects/cpu-monitor" class="text-xl underline">CPU monitor</a>
         </li>
-        <li>
-            <a href="/projects/news-app">News App</a>
+        <li class="px-5">
+            <a href="/projects/news-app" class="text-xl underline">News App</a>
         </li>
-        <li>
-            <a href="/projects/stock-app">Stock App</a>
+        <li class="px-5">
+            <a href="/projects/stock-app" class="text-xl underline">Stock App</a>
         </li>
-        <li>
-            <a href="/projects/router">Router</a>
+        <li class="px-5">
+            <a href="/projects/router" class="text-xl underline">Router</a>
         </li>
     </ul>
 </section>
