--- a/apps/portfolio/src/pages/resume/index.astro
+++ b/apps/portfolio/src/pages/resume/index.astro
@@ -6,6 +6,12 @@ import Skills from "../../components/resume/skills.md";
 import Experience from "../../components/resume/experience.md";
 ---
 
+<style>
+    h1 {
+        font-size: 1.875rem;
+    }
+</style>
+
 <Main>
     <Header />
     <Education />
