feat: (portfolio) add some styles

--- a/apps/portfolio/src/components/contact/index.astro
+++ b/apps/portfolio/src/components/contact/index.astro
@@ -1,11 +1,8 @@
----
----
-
-<section>
-    <div>
+<section class="flex">
+    <div class="px-5">
         <a href="mailto: ronnebaumvince@gmail.com" class="text-xl underline">email</a>
     </div>
-    <div>
+    <div class="px-5">
         <a href="tel:+1614-747-2182" class="text-xl underline">phone</p>
     </div>
 </section>
