--- a/apps/portfolio/src/layouts/main.astro
+++ b/apps/portfolio/src/layouts/main.astro
@@ -14,7 +14,9 @@ import Footer from "../components/footer/index.astro";
 	</head>
 	<body>
         <Header />
-        <slot />
+        <main class="mt-16 py-3">
+            <slot />
+        </main>
         <Footer />
 	</body>
 </html>
