--- a/apps/portfolio/src/pages/projects/news-app/index.astro
+++ b/apps/portfolio/src/pages/projects/news-app/index.astro
@@ -5,7 +5,13 @@ import Features from "../../../components/projects/news/features.md";
 ---
 
 <ProjectLayout>
-    <h3>News App</h3>
-    <Overview />
-    <Features />
+    <section>
+        <h2>News App</h2>
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Overview />
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Features />
+    </section>
 </ProjectLayout>
