--- a/apps/portfolio/src/pages/projects/db/index.astro
+++ b/apps/portfolio/src/pages/projects/db/index.astro
@@ -4,10 +4,15 @@ import Overview from "../../../components/projects/db/overview.md";
 import Features from "../../../components/projects/db/features.md";
 ---
 
-
 <ProjectsLayout>
-    <h2>LexiDB</h2>
-    <Overview />
-    <Features />
+    <section>
+        <h2>LexiDB</h2>
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Overview />
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Features />
+    </section>
 </ProjectsLayout>
 
