--- a/apps/portfolio/src/pages/projects/diety/index.astro
+++ b/apps/portfolio/src/pages/projects/diety/index.astro
@@ -6,8 +6,14 @@ import Features from "../../../components/projects/diety/features.md"
 
 
 <ProjectsLayout>
-    <h2>Diety</h2>
-    <Overview />
-    <Features />
+    <section>
+        <h2>Diety</h2>
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Overview />
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Features />
+    </section>
 </ProjectsLayout>
 
