--- a/apps/portfolio/src/pages/projects/router/index.astro
+++ b/apps/portfolio/src/pages/projects/router/index.astro
@@ -5,7 +5,14 @@ import Features from "../../../components/projects/router/features.md";
 ---
 
 <ProjectLayout>
-    <h3>Router</h3>
-    <Overview />
-    <Features />
+    <section>
+        <h2>Router</h2>
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Overview />
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Features />
+    </section>
 </ProjectLayout>
+
