--- a/apps/portfolio/src/pages/projects/db/index.astro
+++ b/apps/portfolio/src/pages/projects/db/index.astro
@@ -2,6 +2,7 @@
 import ProjectsLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/db/overview.md";
 import Features from "../../../components/projects/db/features.md";
+import Takeaway from "../../../components/projects/db/takeaway.md";
 ---
 
 <ProjectsLayout>
@@ -13,6 +14,9 @@ import Features from "../../../components/projects/db/features.md";
     </section>
     <section class="max-w-[80ch] text-l">
         <Features />
+    </section>
+    <section class="max-w-[80ch] text-l">
+        <Takeaway />
     </section>
 </ProjectsLayout>
 
