feat: (portfolio) my portfolio is more responsive than yours

--- a/apps/portfolio/src/components/links/footerLinks.astro
+++ b/apps/portfolio/src/components/links/footerLinks.astro
@@ -1,8 +1,5 @@
----
----
-
 <section>
-    <ul class="flex items-center justify-center">
+    <ul class="grid place-items-center md:flex md:items-center md:justify-center">
         <li class="px-5">
             <a href="/about" class="text-xl">about me</a>
         </li>
