--- a/apps/portfolio/src/components/links/projectlinks.astro
+++ b/apps/portfolio/src/components/links/projectlinks.astro
@@ -1,5 +1,5 @@
-<section>
-    <ul class="flex items-center justify-center">
+<section class="hidden sm:block">
+    <ul class="md:flex md:items-center md:justify-center grid grid-cols-4">
         <li class="px-5">
             <a href="/projects/db" class="text-xl underline">LexiDB</a>
         </li>
