--- a/apps/portfolio/src/pages/projects/db/index.astro
+++ b/apps/portfolio/src/pages/projects/db/index.astro
@@ -1,7 +1,7 @@
 ---
 import ProjectsLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/db/overview.md";
-import Features from "../../../components/projects/db/features.md";
+import Features from "../../../components/projects/db/features.astro";
 import Takeaway from "../../../components/projects/db/takeaway.md";
 ---
 
@@ -9,13 +9,13 @@ import Takeaway from "../../../components/projects/db/takeaway.md";
     <section>
         <h2>LexiDB</h2>
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Overview />
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Features />
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Takeaway />
     </section>
 </ProjectsLayout>
