feat: (portfolio) my footer is cooler than yours

--- a/apps/portfolio/src/layouts/main.astro
+++ b/apps/portfolio/src/layouts/main.astro
@@ -12,9 +12,9 @@ import Footer from "../components/footer/index.astro";
 		<title>Vince</title>
         <script src="./main.ts"></script>
 	</head>
-	<body>
+	<body class="flex flex-col min-h-screen">
         <Header />
-        <main class="mt-16 py-3">
+        <main class="mt-16 py-3 grow">
             <slot />
         </main>
         <Footer />
