--- a/apps/portfolio/src/components/footer/index.astro
+++ b/apps/portfolio/src/components/footer/index.astro
@@ -4,7 +4,7 @@ import FooterLinks from "../links/footerLinks.astro";
 ---
 
 
-<footer class="w-full bg-neutral-200 grid grid-cols-2 place-items-center">
+<footer class="w-full bg-neutral-200 grid grid-cols-2 place-items-center py-5">
     <section class="grid place-items-center">
         <h2 class="text-2xl">Site Links</h2>
         <FooterLinks />
