--- a/apps/portfolio/src/pages/projects/stock-app/index.astro
+++ b/apps/portfolio/src/pages/projects/stock-app/index.astro
@@ -5,13 +5,13 @@ import Features from "../../../components/projects/stock/features.md";
 ---
 
 <ProjectLayout>
-    <section>
+    <section class="grid place-items-center">
         <h2>Stock App</h2>
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Overview />
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Features />
     </section>
 </ProjectLayout>
