--- a/apps/portfolio/src/pages/projects/cpu-monitor/index.astro
+++ b/apps/portfolio/src/pages/projects/cpu-monitor/index.astro
@@ -1,18 +1,18 @@
 ---
 import ProjectsLayout from "../../../layouts/projects.astro";
 import Overview from "../../../components/projects/cpu/overview.md";
-import Features from "../../../components/projects/cpu/features.md";
+import Features from "../../../components/projects/cpu/features.astro";
 ---
 
 
 <ProjectsLayout>
-    <section>
+    <section class="grid place-items-center">
         <h2>CPU Monitor</h2>
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Overview />
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Features />
     </section>
 </ProjectsLayout>
