--- a/apps/portfolio/src/pages/projects/db/index.astro
+++ b/apps/portfolio/src/pages/projects/db/index.astro
@@ -6,7 +6,7 @@ import Takeaway from "../../../components/projects/db/takeaway.md";
 ---
 
 <ProjectsLayout>
-    <section>
+    <section class="grid place-items-center">
         <h2>LexiDB</h2>
     </section>
     <section class="max-w-[80ch] text-lg">
