--- a/apps/portfolio/src/pages/projects/vstr/index.astro
+++ b/apps/portfolio/src/pages/projects/vstr/index.astro
@@ -6,13 +6,13 @@ import Features from "../../../components/projects/vstr/features.md"
 
 
 <ProjectsLayout>
-    <section>
+    <section class="grid place-items-center">
         <h2>vstr</h2>
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Overview />
     </section>
-    <section class="max-w-[80ch] text-l">
+    <section class="max-w-[80ch] text-lg">
         <Features />
     </section>
 </ProjectsLayout>
